@@ -3,11 +3,12 @@ Section: games
 Priority: optional
 Maintainer: Max Kellermann <max@duempel.org>
 Standards-Version: 3.6.1
-Build-Depends-Indep: debhelper (>= 5), cli-common (>= 0.1.3), mono-mcs (>= 1.1.7), libmono-winforms1.0-cil, xsltproc, docbook-xsl
+Build-Depends-Indep: debhelper (>= 5), cli-common (>= 0.1.3), mono-mcs (>= 1.1.7), libmono-winforms1.0-cil, liblog4net1.2-cil (>= 1.2.8), xsltproc, docbook-xsl
 
 Package: sunuo
 Architecture: all
 Depends: mono (>= 1.1.7), libgdiplus (>= 1.1.7),
+ liblog4net1.2-cil (>= 1.2.8),
  libmono-npgsql1.0-cil (>= 1.1.13),
  ruby (>= 1.8), debconf (>= 1.4.30.13)
 Recommends: sunuo-skeleton, sunuo-scripts-legacy
