@@ -81,6 +81,7 @@ sunuo (0.3.2) unstable; urgency=low
     - Engines.Reports
     - Engines.RemoteAdmin
   * upgraded log4net to 1.2.10
+  * use log4net from Debian package
   * imported RunUO data and saves directory
   * run SunUO in a loop
     - added Core.Shutdown() supporting the environment variable SUNUO_EXIT
